--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 # These two properties are always first, and always absolute paths
-source: "/home/zachary/blog_converter"
-destination: "/home/zachary/blog_converter/public"
+source: "/home/zachary/blog"
+destination: "/home/zachary/blog/public"
 web_root: "https://blog2.za3k.com"
 
 post_dir: "posts"
