Add rss feed, authors, pagination magic

--- a/config.yaml
+++ b/config.yaml
@@ -8,15 +8,22 @@ post_dir: "posts"
 page_dir: "pages"
 image_dir: "images"
 static_dir: "static"
-tag_template: "templates/tag.mustache.html"
-category_template: "templates/tag.mustache.html"
-post_template: "templates/post.mustache.html"
-tagcloud_template: "templates/tagcloud.mustache.html"
-layout_template: "templates/layout.mustache.html"
 
-post_destination: "{{destination}}/posts/{{id}}.html"
-tag_destination: "{{destination}}/tag/{{slug}}.html"
+author_template: "templates/author.mustache.html"
+category_template: "templates/tag.mustache.html"
+deadlinks_template: "templates/deadlinks.mustache.html"
+feed_template: "templates/feed.mustache.html"
+layout_template: "templates/layout.mustache.html"
+post_template: "templates/post.mustache.html"
+tag_template: "templates/tag.mustache.html"
+tagcloud_template: "templates/tagcloud.mustache.html"
+
+author_destination: "{{destination}}/author/{{slug}}.html"
 category_destination: "{{destination}}/category/{{slug}}.html"
-page_destination: "{{destination}}/{{page}}"
+deadlinks_destination: "{{destination}}/pages/deadlinks.html"
+feed_destination: "{{destination}}/pages/feed.xml"
 image_destination: "{{destination}}/images/{{image}}"
+page_destination: "{{destination}}/{{page}}"
+post_destination: "{{destination}}/posts/{{id}}.html"
 static_destination: "{{destination}}/{{relative_path}}"
+tag_destination: "{{destination}}/tag/{{slug}}.html"
