--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "joplin-turndown-plugin-gfm": "^1.0.12",
+    "puppeteer": "^22.13.0",
     "turndown": "^7.2.0"
   }
 }
