--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "dependencies": {
     "joplin-turndown-plugin-gfm": "^1.0.12",
     "puppeteer": "^22.13.0",
-    "turndown": "^7.2.0"
+    "turndown": "file:../turndown"
   }
 }
